log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk-exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: ping-pong-vol
          persistentVolumeClaim:
            claimName: ping-pong-claim
        - name: configmap-vol
          configMap:
            name: log-output-configmap
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: log-output-reader
          image: vkantanen/log-output-reader:2.06
          volumeMounts:
            - name: ping-pong-vol
              mountPath: /usr/src/app/files
            - name: configmap-vol
              mountPath: /usr/src/app/config
        - name: log-output-generator
          image: vkantanen/log-output-generator:1.10
          volumeMounts:
            - name: ping-pong-vol
              mountPath: /usr/src/app/files
